--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Prueba</h1>
+    <h1>prueba</h1>
+<header>
+    <nav>
+        <div>
+
+        </div>
+    </nav>
+</header>
 </body>
 </html>
