--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -6,13 +6,39 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>prueba</h1>
 <header>
+    <div class="logo">
+        <img src="" alt="logo">
+    </div>
     <nav>
-        <div>
-
+        <div class="menu">
+            <a href="#acceuil">Acceuil</a>
+            <a href="#voitures">Voitures</a>
+            <a href="#categories">Catégories</a>
+            <a href="#contact">contact</a>
         </div>
     </nav>
 </header>
+<div>
+    <h1>By carsport</h1>
+    <h2>l’Experience Extraoridinaire</h2>
+    <p>Notre journaliste Jean-Pierre Gagick essaie le tout dernier modèle de Porsche : la 911 S/T. Et pour trouver l’origine du nom "S/T", il faut remonter à la création originelle de 1969. À cette époque, le constructeur souhaite créer une version allégée de la 911 S pour la compétition. Face à ce succès inattendu, Porsche prend donc la décision de créer son modèle homologué pour la route.</p>
+    <button>Découvrir</button>
+</div>
+<div>
+<img src="img1().png">
+</div>
+<div>
+
+</div>
+<div>
+
+</div>
+<div>
+
+</div>
+<div>
+
+</div>
 </body>
 </html>
