--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -1,44 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CarSport</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-<header>
-    <div class="logo">
-        <img src="" alt="logo">
-    </div>
-    <nav>
-        <div class="menu">
-            <a href="#acceuil">Acceuil</a>
-            <a href="#voitures">Voitures</a>
-            <a href="#categories">Catégories</a>
-            <a href="#contact">contact</a>
+    <header>
+        <div class="logo">
+            <img src="../proyecto/imagen/logo cars.png">
         </div>
-    </nav>
-</header>
-<div>
-    <h1>By carsport</h1>
-    <h2>l’Experience Extraoridinaire</h2>
-    <p>Notre journaliste Jean-Pierre Gagick essaie le tout dernier modèle de Porsche : la 911 S/T. Et pour trouver l’origine du nom "S/T", il faut remonter à la création originelle de 1969. À cette époque, le constructeur souhaite créer une version allégée de la 911 S pour la compétition. Face à ce succès inattendu, Porsche prend donc la décision de créer son modèle homologué pour la route.</p>
-    <button>Découvrir</button>
-</div>
-<div>
-<img src="img1().png">
-</div>
-<div>
+        <nav>
+            <ul>
+                <li><a href="#">ACCUEIL</a></li>
+                <li><a href="#">VOITURES</a></li>
+                <li><a href="#">CATÉGORIES</a></li>
+                <li><a href="#contact">CONTACT</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <section class="hero">
+        <div class="text-content">
+            <p class="byline">BY CARSPORT</p>
+            <h1>L’EXPERIENCE EXTRAORDINAIRE</h1>
+        </div>
+        <div class="description">
+            <p>Notre journaliste Jean-Pierre Gagick essaie le tout dernier modèle de Porsche : la 911 S/T. Et pour trouver l'origine du nom "S/T", il faut remonter à la création originale de 1969. À cette époque, le constructeur souhaite créer une version allégée de la 911 S pour la compétition. Face à ce succès inattendu, Porsche prend donc la décision de créer son<br> modèle homologué pour la route.</p>
+            <div class="btn-container">
+                <button class="btn">DÉCOUVRIR</button>
+                <span class="page-counter">01 / 06</span>
+            </div>
+        </div>
+        <div class="image-content">
+            <img src="../proyecto/imagen/img1().png" alt="Porsche sur une route forestière" width="1240px" height="457px">
+        </div>
+    </section>
+    <section>
 
-</div>
-<div>
+    </section>
+    <section>
 
-</div>
-<div>
+    </section>
+    <section>
 
-</div>
-<div>
+    </section>
+    <section>
 
-</div>
+    </section>
+    <section>
+
+    </section>
 </body>
 </html>
