--- a/index.html
+++ b/index.html
@@ -9,10 +9,504 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="fonts.css">
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
+    <style>
+            body {
+            margin: 0;
+            box-sizing: border-box;
+            font-family: 'SF Pro Display', sans-serif;
+            max-width: 1312px;
+            margin: auto;
+        }
+
+        hr {
+            height: 1px;
+            border: none;
+            background-color: #000;
+        }
+
+        .nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: auto;
+        }
+
+        .nav__logo {
+            border: solid black 2px;
+            font-family: Bahn Pro Regular;
+            font-size: 30px;
+            height: fit-content;
+            width: 100px;
+            text-align: center;
+        }
+
+        .nav__list {
+            display: flex;
+            justify-content: space-around;
+            gap: 10px;
+            width: 50%;
+            padding: 0;
+            flex-wrap: wrap;
+            margin: 10px;
+            font-size: 1.1em;
+        }
+
+        .nav__item {
+            list-style: none;
+            margin: auto;
+            padding: 10px;
+            transform: scale(.8);
+        }
+
+        .nav__link {
+            text-decoration: none;
+            color: #000;
+        }
+
+        .nav__icons {
+            display: flex;
+            gap: 20px;
+            scale: 1.2;
+        }
+
+        .nav__list2 {
+            display: flex;
+            padding: 20px;
+            gap: 20px;
+            padding-right: 5px;
+        }
+
+        .nav__item2 {
+            list-style: none;
+        }
+
+        .separación_nav {
+            margin-bottom: 50px;
+        }
+
+
+        @media screen and (max-width: 1100px) {
+            .nav__list {
+                width: 70%;
+            }
+            .nav__logo {
+                margin-left: 10px;
+            }
+        }
+
+        @media screen and (max-width: 900px) {
+            .nav__list {
+                width: 100%;
+            }
+        }
+
+        @media screen and (max-width: 500px) {
+            .nav {
+                width: 100%;
+            }
+            
+            .nav__list {
+                margin: 0;
+            }
+            .nav__list2 {
+                margin: 0;
+                padding: 10px;
+                flex-direction: column;
+            }
+            .nav__item {
+                margin: 0;
+            }
+            .nav__logo {
+                margin: 0;
+            }
+        }
+
+        header {
+            margin: auto;
+        }
+
+        .titulo {
+            font-size: 96px;
+            font-weight: 500;
+            width: fit-content;
+            position: relative;
+            left: -5px;
+        }
+
+        .hedaer__parrafo-titulo {
+            margin-bottom: 0;
+            font-size: .8em;
+            position: relative;
+            top: 5px;
+        }
+
+        .header__container{
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+        }
+
+        .header__div {
+            width: 70%;
+        }
+
+        .segundo--div {
+            margin-top: 40px;
+            width: 350px;
+            text-align: justify;
+        }
+
+        .segundo--div__apartado {
+            display: flex;
+            justify-content: space-between;
+            gap: 20px;
+            margin-top: 30px;
+        }
+
+        .seción-barra-progreso {
+            width: 40%;
+            margin-top: 10px;
+            font-size: .9em;
+            font-weight: bold;
+        }
+
+        .barra-progreso {
+            width: 100%;
+            height: 2px;
+            background-color: #ddd;
+            position: relative;
+            margin-top:10px;
+            border-radius: 2px;
+            
+        }
+
+        .raya-progreso {
+            width: 16.67%;
+            background-color: #333;
+            position: absolute;
+            height: 2px;
+            border-radius: 2px;
+        }
+
+        .titulo {
+            margin: 0;
+        }
+
+        .header__párrafo {
+            font-size: .85em;
+        }
+
+        .boton {
+            border-radius: 50px;
+            padding: 8px 25px;
+            height: fit-content;
+            background-color: #fff;
+            border: 1px solid #000;
+            text-transform: uppercase;
+            font-family: 'SF Pro Display';
+            font-size: 1em;
+        }
+
+        .imagen__header {
+            max-width: 100%;
+            margin: 20px 0;
+        }
+
+        .separacion_header {
+            margin: 10px 0;
+            margin-top: 45px;
+        }
+
+
+        .main__primera-secion {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .main__primera-seción_div {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .segundo--boton {
+            margin-top: 20px;
+        }
+
+        .main__flechas {
+            display: flex;
+            justify-content: end;
+            margin: 10px;
+            gap: 20px;
+        }
+
+        #fecha-atras {
+            color: #ddd;
+        }
+
+        .main__subtitulo {
+            font-size: 4em;
+            width: 30%;
+            font-weight: 100;
+            margin: 10px;
+            text-transform: uppercase;
+        }
+
+        .main__secion-imagenes {
+            display: flex;
+            justify-content: space-between;
+            margin: 20px 0;
+        }
+
+        .main__secion-imagenes_parte {
+            width: 300px;
+        }
+
+        .main__imagen {
+            width: 300px;
+            height: 300px;
+            object-fit: cover;
+            object-position: center;
+            border-radius: 20px;
+        }
+
+        .imagen--diferente {
+            object-position: 80%;
+        }
+
+        .tipo-coche {
+            color: #ccc;
+            margin: 0;
+            text-transform: uppercase;
+        }
+
+        .descripcion {
+            margin: 0;
+            text-transform: uppercase;
+        }
+
+        .separacion__main {
+            margin: 50px 0;
+        }
+
+        .main_segunda-sesion {
+            display: flex;
+            flex-direction: column;
+            margin: auto;
+            align-items: center;
+        }
+
+        .main_segunda-sesion_parrafo {
+            width: 210px;
+            text-align: justify;
+        }
+
+        .main_raya-segunda-sesion {
+            margin: 20px 0 40px 0;
+            transform: scaleY(2);
+        }
+
+        .main__segunda-secion_imagen {
+            width: 800px;
+        }
+
+        .tercer--boton {
+            margin: 30px;
+            margin-bottom: 30px;
+        }
+
+
+        strong {
+            text-transform: uppercase;
+            font-weight: 500;
+            display: block;
+        }
+
+        .main__subtitulo {
+            margin-left: 0;
+        }
+
+        .main_tercera-sesion_texto {
+            font-size: .78em;
+            width: 90%;
+            text-align: justify;
+        }
+
+        .main_tercera-secion_segunda-parte {
+            display: flex;
+            justify-content: end;
+            gap: 50px;
+            align-items: center;
+            margin: 80px 0;
+        }
+
+        .main_circulo {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 40px;
+            border: 1px solid #000;
+            width: 100px;
+            height: 100px;
+            border-radius: 100%;
+            position: relative;
+            top: -35px;
+        }
+
+        .main_circulo-texto {
+            text-transform: uppercase;
+            text-align: center;
+        }
+
+        .imagen-coche5 {
+            object-fit: cover;
+            width: 728px;
+            height: 317px;
+            border-radius: 20px;
+        }
+
+        .texto-importante_imagen-grande {
+            margin-top: 35px;
+        }
+
+        .texto_imagen-grande {
+            margin-top: 8px;
+            font-size: .85em;
+            font-style: italic;
+            font-weight: 300;
+            color: #333;
+        }
+
+        .footer_separacion {
+            margin: 60px 0;
+            margin-top: 130px;
+        }
+
+        .footer {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .footer_primera-parte {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .footer_titulo {
+            font-size: 4em;
+            font-weight: 300;
+            text-transform: uppercase;
+            margin: 0;
+            width: 90%;
+            margin-bottom: 10px;
+        }
+
+        .footer_input {
+            margin: 20px 0;
+            padding: 10px;
+            width: 30%;
+            border: none;
+            border-bottom: 1px solid #ccc;
+            padding-left: 0;
+            outline: 0;
+            color: #333;
+        }
+
+        #footer_input-icono {
+            position: relative;
+            right: 20px;
+            font-size: 1em;
+        }
+
+        .footer_input::placeholder {
+            color: #ccc;
+        }
+
+        .footer_pay {
+            display: flex;
+            gap: 50px;
+            margin: 50px 0;
+        }
+
+        .footer_segunda-parte {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .footer_segunda-parte_primer-sesion {
+            display: flex;
+            gap: 40px;
+        }
+
+        .footer_menu {
+            width: 100px;
+        }
+
+        .titulo-menu, .titulo-boutiques {
+            margin-bottom: 30px;
+        }
+
+        .list_menu, .list_boutiques {
+            padding: 0;
+        }
+
+        .menu__item, .boutiques__item {
+            list-style: none;
+            padding: 5px 0;
+            width: 100px;
+        }
+
+        .footer_botones {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 20px;
+            width: 250px;
+        }
+
+        .footer-boton-uno {
+            margin-top: 50px;
+        }
+
+        .footer-boton-dos {
+            width: 150px;
+        }
+
+        .footer_boutiques {
+            width: 120px;
+        }
+
+        .list_boutiques {
+            width: 150px;
+        }
+
+        .boutiques__item {
+            width: 150px;
+        }
+
+        .footer_segunda-parte_segunda-sesion {
+            display: flex;
+            margin: 50px 0;
+            justify-content: space-between;
+            align-items: baseline;
+        }
+
+        .footer_iconos {
+            display: flex;
+            justify-content: center;
+            width: 80%;
+            gap: 70px;
+            margin-left: 30px;
+        }
+
+        .footer_expandir {
+            transform: scale(1.5);
+        }
+    </style>
 </head>
 <body>
-
-<!------------------- SECCIÓN NAV -------------------->
 
     <nav class="nav">
         <div class="nav__logo">
@@ -45,8 +539,6 @@
     </nav>
    <hr class="separación_nav">
 
-<!------------------ SECCIÓN HEADER  ---------------->
-
    <header class="header">
         <div class="header__container">
             <div class="header__div">
@@ -69,8 +561,6 @@
         <img class="imagen__header" src="/img/imagenes/img1().png" alt="Imagen de coche">
    </header>
    <hr class="separacion_header">
-
-<!-------------------- SECCIÓN MAÍN   ------------------->
 
    <main class="main">
         <section class="main__primera-secion">
@@ -107,8 +597,6 @@
         </section>
         <hr class="separacion__main">
 
-<!------------------- MAIN SEGUNDA PARTE ----------------------->
-
         <section class="main_segunda-sesion">
             <p class="main_segunda-sesion_parrafo">LAISSER VOUS TENTER PAR UN UNIVERS DE VITESSE PUR</p>
             <span class="main_raya-segunda-sesion">|</span>
@@ -116,8 +604,6 @@
             <button class="boton tercer--boton">DÉCOUVRIR</button>
         </section>
         <hr class="separacion__main">
-
-<!------------------ MAIN TERCERA PARTE  ---------------------->
 
         <section class="main_tercera-sesion">
             <h2 class="main__subtitulo">Boutique</h2>
@@ -156,8 +642,6 @@
         </section>
         <hr class="footer_separacion">
    </main>
-
-<!------------------- SECCIÓN FOOTER --------------------->
 
    <footer class="footer">
         <div class="footer_primera-parte">
