--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projecte 2 - CARS</title>
-    <link rel="icon" href="/img/iconos/icono.png">
+    <link rel="icon" href="./img/iconos/icono.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="fonts.css">
@@ -558,7 +558,7 @@
                 </div>
             </div>
         </div>
-        <img class="imagen__header" src="/img/imagenes/img1().png" alt="Imagen de coche">
+        <img class="imagen__header" src="./img/imagenes/img1().png" alt="Imagen de coche">
    </header>
    <hr class="separacion_header">
 
@@ -575,22 +575,22 @@
         </section>
         <section class="main__secion-imagenes">
             <div class="main__secion-imagenes_parte">
-                <img class="main__imagen" src="/img/imagenes/img2.png" alt="imagen-coche1">
+                <img class="main__imagen" src="./img/imagenes/img2.png" alt="imagen-coche1">
                 <p class="tipo-coche">Porche 911 GT3</p>
                 <strong class="descripcion">body kit carbon</strong>
             </div>
             <div class="main__secion-imagenes_parte">
-                <img class="main__imagen" src="/img/imagenes/img3.png" alt="imagen-coche2">
+                <img class="main__imagen" src="./img/imagenes/img3.png" alt="imagen-coche2">
                 <p class="tipo-coche">Porche CAYENNE</p>
                 <strong class="descripcion">Présentation</strong>
             </div>
             <div class="main__secion-imagenes_parte">
-                <img class="main__imagen imagen--diferente" src="/img/imagenes/img4.png" alt="imagen-coche3">
+                <img class="main__imagen imagen--diferente" src="./img/imagenes/img4.png" alt="imagen-coche3">
                 <p class="tipo-coche">Porche 911 3.2</p>
                 <strong class="descripcion">body kit carbon</strong>
             </div>
             <div class="main__secion-imagenes_parte">
-                <img class="main__imagen imagen--diferente" src="/img/imagenes/img5.png" alt="imagen-coche4">
+                <img class="main__imagen imagen--diferente" src="./img/imagenes/img5.png" alt="imagen-coche4">
                 <p class="tipo-coche">Porche 988 SPYDER</p>
                 <strong class="descripcion">showcase</strong>
             </div>
@@ -600,7 +600,7 @@
         <section class="main_segunda-sesion">
             <p class="main_segunda-sesion_parrafo">LAISSER VOUS TENTER PAR UN UNIVERS DE VITESSE PUR</p>
             <span class="main_raya-segunda-sesion">|</span>
-            <img class="main__segunda-secion_imagen" src="/img/imagenes/img6().png" alt="imagen SHOW ROOM">
+            <img class="main__segunda-secion_imagen" src="./img/imagenes/img6().png" alt="imagen SHOW ROOM">
             <button class="boton tercer--boton">DÉCOUVRIR</button>
         </section>
         <hr class="separacion__main">
@@ -609,22 +609,22 @@
             <h2 class="main__subtitulo">Boutique</h2>
             <div class="main__secion-imagenes">
                 <div class="main__secion-imagenes_parte">
-                    <img class="main__imagen" src="/img/imagenes/img7.png" alt="Producto 1">
+                    <img class="main__imagen" src="./img/imagenes/img7.png" alt="Producto 1">
                     <strong>Vestes</strong>
                     <p class="main_tercera-sesion_texto">Issue de la collection Baron, la montre 219G164 brille par son originalité et sa couleur. </p>
                 </div>
                 <div class="main__secion-imagenes_parte">
-                    <img class="main__imagen" src="/img/imagenes/img8.png" alt="Producto 2">
+                    <img class="main__imagen" src="./img/imagenes/img8.png" alt="Producto 2">
                     <strong>Montres</strong>
                     <p class="main_tercera-sesion_texto">La veste de course, souvent appelée "Racing Jacket", est une pièce de mode audacieuse et dynamique.</p>
                 </div>
                 <div class="main__secion-imagenes_parte">
-                    <img class="main__imagen" src="/img/imagenes/img9.png" alt="Producto 3">
+                    <img class="main__imagen" src="./img/imagenes/img9.png" alt="Producto 3">
                     <strong>E-bikes</strong>
                     <p class="main_tercera-sesion_texto">La gamme E-Motion met l’accent sur le consommateur qui est sensible aux prix mais qui privilégie quand même des produits de qualités.</p>
                 </div>
                 <div class="main__secion-imagenes_parte">
-                    <img class="main__imagen" src="/img/imagenes/img10.png" alt="Producto 4">
+                    <img class="main__imagen" src="./img/imagenes/img10.png" alt="Producto 4">
                     <strong>Chaises de bureau</strong>
                     <p class="main_tercera-sesion_texto">En tissu respirant et dispose d’un support lombaire rembourré réglable en hauteur et profondeur, une caractéristique essentielle.</p>
                 </div>
@@ -634,7 +634,7 @@
                     <p class="main_circulo-texto">tOUs LES produits</p>
                 </div>
                 <div class="main_tercera-sesion_imagen-grande">
-                    <img class="imagen-coche5" src="/img/imagenes/img11().png" alt="Coche 5">
+                    <img class="imagen-coche5" src="./img/imagenes/img11().png" alt="Coche 5">
                     <strong class="texto-importante_imagen-grande">La vitesse n’a plus de limite</strong>
                     <p class="texto_imagen-grande">Moteur 6 cylindres à plat atmosphérique de 525 chevaux.</p>
                 </div>
@@ -690,10 +690,10 @@
             </div>
             <div class="footer_segunda-parte_segunda-sesion">
                 <div class="footer_iconos">
-                    <img src="img/logos/facebook.png" alt="Facebook">
-                    <img src="img/logos/Instagram.png" alt="Instagram">
-                    <img src="img/logos/twitter.png" alt="Twitter">
-                    <img src="img/logos/linkedin.png" alt="Linkedin">
+                    <img src="./img/logos/facebook.png" alt="Facebook">
+                    <img src="./img/logos/Instagram.png" alt="Instagram">
+                    <img src="./img/logos/twitter.png" alt="Twitter">
+                    <img src="./img/logos/linkedin.png" alt="Linkedin">
                 </div>
                 <div class="footer_expandir">
                     <span class="material-symbols-outlined">
